# Argus-IDS

./: .env.example  .gitattributes  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py
backend/app/: __init__.py  cli.py  main.py
backend/app/api/: deps.py  router.py
backend/app/api/routes/: alerts.py  auth.py  detection.py  health.py  ingest.py  maintenance.py  users.py  ws.py
backend/app/core/: config.py  security.py
backend/app/crud/: __init__.py  alert.py  user.py
backend/app/db/: session.py  types.py
backend/app/detection/: anomaly.py  definitions.py  engine.py  features.py  finding.py  loader.py  mitre.py  scoring.py  sync.py
backend/app/detection/rules/: brute_force_ssh.yml  http_dos.yml  port_scan.yml  sqli_probe.yml
backend/app/enrich/: geoip.py  reputation.py  service.py
backend/app/ingest/: detect.py  service.py
backend/app/models/: __init__.py  alert.py  enrichment.py  enums.py  event.py  log_source.py  rule.py  user.py
backend/app/realtime/: broadcaster.py
backend/app/schemas/: alert.py  auth.py  detection.py  health.py  ingest.py  user.py
backend/tests/: conftest.py  test_alerts.py  test_analyze_api.py  test_anomaly.py  test_auth.py  test_broadcaster.py  test_cli.py  test_detect.py  test_detection.py  test_detection_api.py  test_enrich.py  test_features.py  test_generic.py  test_health.py  test_ingest.py  test_maintenance.py  test_mitre.py  test_parsers.py  test_scoring.py  test_security.py  test_ws.py
(+55 files in other folders)
