[project]
name = "argus-ids"
version = "0.1.0"
description = "Argus — real-time intrusion detection platform"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Muskan Gupta" }]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic[email]>=2.7",
    "pydantic-settings>=2.3",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.2",
    "redis>=5.0",
    "passlib[argon2]>=1.7",
    "pyjwt>=2.8",
    "python-multipart>=0.0.9",
    "pyyaml>=6.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
ml = ["scikit-learn>=1.5", "numpy>=1.26", "pandas>=2.2"]
geoip = ["geoip2>=4.8"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.6", "mypy>=1.10"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
asyncio_mode = "auto"
# Silence known third-party deprecation noise so our own warnings stand out.
filterwarnings = [
    "ignore:Using `httpx` with `starlette.testclient` is deprecated",
    "ignore:Accessing argon2.__version__ is deprecated",
]
